--- a/assets/style.css
+++ b/assets/style.css
@@ -1,199 +1,253 @@
-@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
-  text-decoration: none;
+  margin: 0%;
+  padding: 0%;
 }
 
 body {
-  font-size: 100%;
-  background: linear-gradient(31.15deg,#025266 46.62%,#025266.21%);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-
-.cabecalho {
+.menu-cabecalho {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  padding: 24px;
-  display : flex;
- align-items: center;
+  row-gap: 10px;
+  padding: 20px;
 }
 
-.cabecalho-imagem {
-  height: 72px;
-
+.cor-personalizada {
+  background-image: url(corvo.jpg);
 }
 
-.cabecalho-menu {
+#menu ul {
+  list-style: none;
+  text-align: center;
+  float: left;
+  width: 100%;
+  color: white;
   display: flex;
-  gap: 32px;
+  flex-direction: row;
+  gap: 20px;
+  padding: 20px 15px 10px 50px;
+  font-weight: 700;
 }
 
-
-.cabecalho-menu-item {
-  font-family: 'Sarala', sans-serif;
-  color: #FFF2E7;
-  font-weight: 400;
-  font-size: 18px;
-
-
+#id-menu {
+  color: white;
 }
 
-.conteudo {
-  margin-bottom: 48px;
-  border-top: 0.4px solid #FFF2E7;
+#id-menu:hover {
+  border-bottom: 3px solid white;
+  background-color: #a5a5a567;
+}
+li {
+  cursor: pointer;
+}
+
+.imagem-menu {
+  width: 60px;
+}
+
+.botao {
+  width: 100px;
+  height: 40px;
+  background-color: white;
+  color: #025266;
+  font-weight: bold;
+  border-radius: 10px;
+  border: none;
+  margin-right: 20px;
+}
+
+.botao:hover {
+  background-color: #595a5c;
+  color: #ffffff;
+  cursor: pointer;
+}
+.meus-botoes {
+  margin-left: 750px;
 }
 
 .conteudo-principal {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.conteudo-principal-escrito {
-  display: flex;
-  flex-direction: column;
-  margin: 50px;
-  gap: 32px;
-}
-
-.conteudo-principal-escrito-titulo {
-  font-family: 'Righteous', cursive;
-  font-weight: 400;
-  font-size: 64px;
-  color: #FFF2E7;
-}
-
-.conteudo-principal-escrito-subtitulo {
-  font-family: 'Sarala', sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  color: #ECD6C4;
-}
-
-.conteudo-principal-escrito-botao {
-
-  background-color: #666666;
-  width: 180px;
-  height: 60px;
-  border-radius: 15px;
-  font-family: 'Sarala', sans-serif;
-  font-size: 18px;
-  color: #ffffff;
-  margin-top: 30px;
-  border: none;
-  margin: 10px;
-  box-align: 56%;
-  transition:  3s case in;
-
-}
-
-#minha-div.{
-  display : flex;
- align-items: center;
-
-   
-}
-
-.conteudo-principal-escrito-botao:hover {
-  background-color: rgba(236, 214, 196, 0.53);
-}
-
-.conteudo-principal-imagem {
-  height: 400px;
-  margin-left: auto;
+  text-align: center;
+  align-self: center;
+  color: aliceblue;
 }
 
 .conteudo-secundario {
+  text-align: center;
+  padding-right: 15px;
+  padding: 40px;
+  display: flex;
+  gap: 25px;
+  justify-content: center;
+  color: black;
+  background-color: #e7ecf1;
+  white-space: nowrap;
+  flex-wrap: wrap;
+}
+h1 {
+  font-size: 50px;
+  padding-top: 25px;
+}
+
+p {
+  font-size: larger;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  font-weight: 500;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+
+.cadastro {
+  width: 200px;
+  height: 40px;
+  background-color: white;
+  border-radius: 10px;
+  color: #025266;
+  border: none;
+  margin-bottom: 20px;
+}
+
+.cadastro:hover {
+  background-color: #595a5c;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+a:hover {
+  color: blue;
+  cursor: pointer;
+}
+
+.conteudo-terciario {
+  background-image: url("pexels.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px;
+  color: #e7ecf1;
+  text-align: left;
+}
+
+.apresentacao-pagina {
+  background-color: #e7ecf1;
+  display: grid;
+  grid-template-columns: repeat(2, 0.5fr);
+  grid-template-rows: repeat(3, 0.5fr);
+}
+.primeira-sessao {
+  display: flex;
+  flex-direction: row;
+  width: 650px;
+  height: 320px;
+  background-color: #ffffff;
+  padding: 10px 10px 10px 10px;
+  margin: 15px 15px 15px 15px;
+}
+.img-1 {
+  width: 200px;
+  padding: 10px 10px 10px 10px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  color: #33393d;
+}
+
+.assunto {
+  text-align: justify;
+  font-size: 15px;
+  margin-bottom: 20px;
+}
+
+.roboto-condensed {
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.categoria {
+  display: flex;
+  flex-direction: row;
+  height: 50px;
+}
+
+#tags {
+  padding: 5px;
+  font-size: x-small;
+  color: #5e5858;
+}
+
+.icones {
+  border-top: 1px solid rgb(233, 230, 230);
+  display: flex;
+  padding: 10px;
+  justify-content: space-between;
+  gap: 10px;
+  margin-top: 5px;
+}
+
+#usuario {
+  border-radius: 50px;
+}
+
+.nome-usuario {
+  font-size: 10px;
+}
+
+.sobre-usuario {
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+}
+
+.botoes-interacao {
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+}
+#paragrafo {
+  font-size: x-small;
+}
+
+.categoria-botao {
+  width: 35px;
+  height: 22px;
+  border-radius: 14px;
+  border: none;
+  background-color: #d8e0e4;
+  color: #969899;
+  margin-right: 5px;
+  margin-left: 4px;
+  font-weight: 550;
+  margin-bottom: 10px;
+}
+
+.rodape {
+  background-color: #000;
+  border-top: 1px solid white;
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 24px;
-  margin-top: 48px;
+  justify-content: center;
 }
 
-.conteudo-secundario-titulo {
-  border-top: 0.4px solid #FFF2E7;
-  padding-top: 48px;
-  font-family: 'Righteous', cursive;
-  font-weight: 400;
-  font-size: 24px;
-  color: #FFF2EF;
-  margin-bottom: 16px;
+.img-rodape {
+  width: 120px;
+  height: 120px;
 }
 
-.conteudo-secundario-paragrafo {
-  font-family: 'Sarala', sans-serif;
-  font-weight: 300;
-  font-size: 18px;
-  color: #ECD6C4;
+.bi-heart-fill {
+  color: red;
 }
-
-
-.coluna-1{
-  float: left;
-  width: 20%;
-  max-width: 20%;
-  margin: 17px;
-  padding: 15px;
-  text-align: center;
-  font-family: 'Sarala', sans-serif;
-  color: #ECD6C4;
-  margin-bottom: 5px; 
-  
-}
-
-.coluna-2{
-  float: left;
-  width: 20%;
-  max-width: 20%;
-  margin: 17px;
-  padding: 15px;
-  text-align: center;
-  font-family: 'Sarala', sans-serif;
-  color: #ECD6C4;
-  margin-bottom: 5px; 
-}
-
-
-a{ 
-color: #ECD6C4;
-
-}
-.row::after {
-  content: "";
-  clear: both;
-  display: table-column;
-  color: #ECD6C4;
-}
-h3{
-   margin: 26;
-    font-family: 'Sarala', sans-serif;
-    color: #ECD6C4;
-    margin-bottom: 2px; 
-  margin: 15px;
-  padding: 10px;
-  }
-
-
-
-
-.rodape {
-    padding: 32px;
-    border-top: 0.4px solid #FFF2E7;
-}
-
-.rodape-imagem {
-  height: 110px;
-  display: block;
-  margin: 0 auto;
-}
-
-p{ 
-  color: #ECD6C4;
-  
-  }
